--- a/style.css
+++ b/style.css
@@ -30,6 +30,12 @@ canvas {
   align-items: center;
   justify-content: center;
   width: 100vw;
-
-
+}
+.projects{
+  border-radius: 0px;
+  border: 0px;
+  position: relative;
+  left:-170px;
+  background-color: rgba(7,12,18,0.4);
+  color: white;
 }
