--- a/style.css
+++ b/style.css
@@ -32,10 +32,15 @@ canvas {
   width: 100vw;
 }
 .projects{
-  border-radius: 0px;
+  border-radius: 4px;
   border: 0px;
   position: relative;
   left:-170px;
-  background-color: rgba(7,12,18,0.4);
-  color: white;
+  background-color: rgba(7,12,18,0.2);
+  color: rgb(145, 183, 196);
+
+}
+.projects:hover{
+  background-color: rgba(7,100,100,0.  2);
+
 }
