--- a/style.css
+++ b/style.css
@@ -13,11 +13,6 @@ canvas {
   left: 0;
   filter: blur(2px);
 }
-#list{
-  z-index: -1 ;
-  position: fixed;
-  top: 0;left: 0;
-}
 
 #opbg{
   z-index: 1;
@@ -54,4 +49,18 @@ canvas {
 }
 .projects:hover{
   background-color: rgba(7,100,100,0.2);
+}
+.node{
+  color: white;
+  background-color: Black;
+  border: 0;
+  border-radius: 0;
+  padding-left:5px;
+  padding-right:5px;
+}
+.node:hover{
+  background-color: inherit;
+}
+#sketch{
+  color:grey;
 }
